--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -3,19 +3,19 @@ description: "Direction-aware vehicle counting app"
 publish_to: 'none' 
 
 environment:
-  sdk: ^3.7.2
+  sdk: ">=3.7.2 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  media_kit: ^1.1.10
-  media_kit_video: ^1.2.4
-  media_kit_libs_windows_video: ^1.0.9
-  media_kit_libs_linux: ^1.1.0
+  path_provider: ^2.1.2
   file_picker: ^6.1.1
   provider: ^6.0.5
+  path: ^1.8.3
+  http: ^1.6.0
   flutter_localizations:
     sdk: flutter
+  intl: 0.19.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -25,6 +25,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  generate: true  
   assets:
     - assets/localization/
     - assets/images/
