--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   path_provider: ^2.1.2
   file_picker: ^6.1.1
+  flutter_colorpicker: ^1.0.3
   provider: ^6.0.5
   path: ^1.8.3
   http: ^1.6.0
@@ -18,6 +19,7 @@ dependencies:
   intl: 0.19.0
   cupertino_icons: ^1.0.8
   navigator: ^1.1.1
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
