--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -9,10 +9,12 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: ^2.1.2
+  country_flags: ^4.0.0
   file_picker: ^6.1.1
   flutter_colorpicker: ^1.0.3
   provider: ^6.0.5
   path: ^1.8.3
+  google_fonts: ^6.1.0
   http: ^1.6.0
   flutter_localizations:
     sdk: flutter
