--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   hive_flutter: ^1.1.0
   system_theme: ^2.0.1
   google_fonts: ^6.1.0
+  flutter_launcher_icons: ^0.13.1
   http: ^1.6.0
   flutter_localizations:
     sdk: flutter
