--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,7 @@ __pycache__/
 frames/
 videos/
 results/
-build/
-!frontend/build/web
+dist/
 develop-eggs/
 dist/
 downloads/
@@ -30,11 +29,16 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Python build artifacts
+/backend/build/
+/backend/dist/
+
+# Flutter build (keep web, ignore others)
+/frontend/build/ios/
+/frontend/build/android/
+/frontend/build/macos/
+/frontend/build/linux/
+/frontend/build/windows/
 
 # Installer logs
 pip-log.txt
