--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   http: ^1.6.0
   video_player: ^2.9.2
+  # Windows implementation for video_player (federated plugin)
+  video_player_win:
   flutter_localizations:
     sdk: flutter
   intl: 0.19.0
